Set up country list / detail

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -449,12 +449,11 @@ entity.category.restrictAccessFlag=Restrict Access
 entity.category_plural=Categories
 entity.comment.comment=Comment
 entity.content=Content
-entity.content_plural=Contents
 entity.content.allowPurchaseFlag=Would you like to sell this content?
-entity.content.contentID=Content ID
 entity.content.cmsContentID=CMS Content ID
 entity.content.cmsContentIDPath=CMS Content ID Path
 entity.content.cmsSiteID=CMS Site ID
+entity.content.contentID=Content ID
 entity.content.defaultProductsPerPage=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.productListingFlag=Use as a product listing page
@@ -464,8 +463,29 @@ entity.content.restrictAccessFlag=Restrict access through subscription and/or pu
 entity.content.showProductInSubPagesFlag=Show product in sub pages
 entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
 entity.content.title=Content Title
+entity.content_plural=Contents
+entity.country=Country
+entity.country.cityLabel=City Label
+entity.country.cityRequiredFlag=Require City
+entity.country.cityShowFlag=Show City
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
+entity.country.localityLabel=Locality Label
+entity.country.localityRequiredFlag=Require Locality
+entity.country.localityShowFlag=Show Locality
+entity.country.postalCodeLabel=Postal Code Label
+entity.country.postalCodeRequiredFlag=Require Postal Code
+entity.country.postalCodeShowFlag=Show Postal Code
+entity.country.stateCodeLabel=State Code Label
+entity.country.stateCodeRequiredFlag=Require State Code
+entity.country.stateCodeShowFlag=Show State Code
+entity.country.street2AddressLabel=Street2 Address Label
+entity.country.street2AddressRequiredFlag=Require Street2 Address 
+entity.country.street2AddressShowFlag=Show Street2 Address
+entity.country.streetAddressLabel=Street Address Label
+entity.country.streetAddressRequiredFlag=Require Street Address
+entity.country.streetAddressShowFlag=Show Street Address
+entity.country_plural=Countries
 entity.creditcardtransaction.authorizationcode=Auth. Code
 entity.define.activeFlag=Active
 entity.define.createdByAccount=Created By
