Added a 'custom' format type for values

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -274,6 +274,7 @@ define.selectall=Select All
 define.show=Show
 define.system=System
 define.true=True
+define.unlimited=Unlimited
 define.username=Username
 define.weight=Weight
 define.yes=Yes
