Updating setting RB Keys

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Fri Apr 06 16:39:30 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -813,19 +812,19 @@ entity.promotionReward.discountType.amountOffShort=Off
 entity.promotionReward.discountType.amountShort=Price
 entity.promotionReward.discountType.percentageOff=Percentage Off
 entity.promotionReward.discountType.percentageOffShort=% Off
-entity.promotionReward.rewards=Rewards
 entity.promotionReward.rewardType=Reward Type
 entity.promotionReward.rewardType.order=Order
 entity.promotionReward.rewardType.product=Product
 entity.promotionReward.rewardType.shipping=Shipping
+entity.promotionReward.rewards=Rewards
 entity.promotionRewardOrder=Order Promotion Reward
 entity.promotionRewardOrder.amountOff=Order Amount Off
 entity.promotionRewardOrder.discount=Discount
 entity.promotionRewardOrder.discounttype=Discount Type
 entity.promotionRewardOrder.percentageOff=Order % Off
-entity.promotionRewardOrder.rewards=Rewards
 entity.promotionRewardOrder.rewardType=Reward Type
 entity.promotionRewardOrder.rewardTypeDisplay=Reward Type
+entity.promotionRewardOrder.rewards=Rewards
 entity.promotionRewardProduct=Product Promotion Reward
 entity.promotionRewardProduct.amount=Item Fixed Price
 entity.promotionRewardProduct.amountOff=Item Amount Off
@@ -872,12 +871,12 @@ entity.promotionqualifierFulfillment.addressZones=Address Zones
 entity.promotionqualifierFulfillment.fulfillmentMethods=Fulfillment Methods
 entity.promotionqualifierFulfillment.maximumFulfillmentWeight=Maximum Weight
 entity.promotionqualifierFulfillment.minimumQuantity=Minimum Quantity
-entity.promotionqualifierFulfillment.qualifiers=Qualifiers
 entity.promotionqualifierFulfillment.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierFulfillment.qualifiers=Qualifiers
 entity.promotionqualifierFulfillment.shippingMethods=Shipping Methods
 entity.promotionqualifierOrder.minimumPrice=Minimum Order Total
-entity.promotionqualifierOrder.qualifiers=Qualifiers
 entity.promotionqualifierOrder.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierOrder.qualifiers=Qualifiers
 entity.promotionqualifierProduct.brands=Brands
 entity.promotionqualifierProduct.excludedProductTypes=Product Type Exclusions
 entity.promotionqualifierProduct.excludedProducts=Product Exclusions
@@ -886,8 +885,8 @@ entity.promotionqualifierProduct.maximumPrice=Maximum Item Price
 entity.promotionqualifierProduct.minimumPrice=Minimum Item Price
 entity.promotionqualifierProduct.productTypes=Product Types
 entity.promotionqualifierProduct.products=Products
-entity.promotionqualifierProduct.qualifiers=Qualifiers
 entity.promotionqualifierProduct.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierProduct.qualifiers=Qualifiers
 entity.promotionqualifier_plural=Promotion Qualifiers
 entity.promotionqualifierfulfillment=Fulfillment Promotion Qualifier
 entity.promotionqualifierorder=Order Promotion Qualifier
@@ -1123,22 +1122,6 @@ frontend.checkout.processorder=Place Order
 frontend.checkout.saveaccount=Save & Continue
 frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
-setting=Setting
-setting.account=Account
-setting.advanced=Advanced Settings
-setting.advanced.currencyLocale=Currency Locale
-setting.advanced.currencyType=Currency Type
-setting.advanced.dateFormat=Date Format
-setting.advanced.editRemoteIDFields=Edit RemoteID Fields in Administration
-setting.advanced.encryptionKeyLocation=Encryption Key Location
-setting.advanced.encryptionKeySize=Encryption Key Size
-setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
-setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
-setting.advanced.logMessages=Slatwall Application Logging
-setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
-setting.advanced.timeFormat=Time Format
-setting.advanced.useProductCacheFlag=User Product Cache
-setting.advanced.useSkuCacheFlag=Use Sku Cache
 setting.brandDisplayTemplate=Brand Display Template
 setting.globalCurrencyLocale=Currency Locale
 setting.globalCurrencyType=Currency Type
@@ -1161,60 +1144,10 @@ setting.globalRemoteIDEditFlag=Edit RemoteID Fields in Administration
 setting.globalRemoteIDShowFlag=View RemoteID Fields in Administrator
 setting.globalTimeFormat=Time Format
 setting.globalURLKeyBrand=Brand URL Key
-setting.globalURLKeyProduct=URL Key
+setting.globalURLKeyProduct=Product URL Key
 setting.globalURLKeyProductType=Product Type URL Key
 setting.globalUseProductCacheFlag=User Product Cache
 setting.globalWeightUnitCode=Weight Measurement Unit
-setting.inherit=Inherit
-setting.order=Order
-setting.order.orderNumberGeneration=Order Number Generation
-setting.order.orderPlacedEmailBCC=New Order Placed Email BCC
-setting.order.orderPlacedEmailCC=New Order Placed Email CC
-setting.order.orderPlacedEmailFrom=New Order Placed Email From
-setting.order.orderPlacedEmailSubject=New Order Placed Email Subject
-setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
-setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
-setting.product=Product
-setting.product.activeFlag_hint=Indicate if the product is active and will be displayed.
-setting.product.allowBackorderFlag=Backorder OK
-setting.product.allowBackorderFlag_hint=Indicate whether this product can be backordered
-setting.product.allowDropshipFlag=Dropship OK
-setting.product.allowDropshipFlag_hint=Indicate whether this product can be dropshipped
-setting.product.allowPreorderFlag=Preorder OK
-setting.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
-setting.product.allowShippingFlag=Shipping OK
-setting.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
-setting.product.callToOrderFlag=Phone Order Only
-setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
-setting.product.defaultProductTemplate=Default Product Template
-setting.product.imageHeightLarge=Large Image Height
-setting.product.imageHeightMedium=Medium Image Height
-setting.product.imageHeightSmall=Small Image Height
-setting.product.imageWidthLarge=Large Image Width
-setting.product.imageWidthMedium=Medium Image Width
-setting.product.imageWidthSmall=Small Image Width
-setting.product.imageextension=Image Extension
-setting.product.missingimagepath=Missing Image Path
-setting.product.productDisplayTemplate=Product Display Template
-setting.product.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
-setting.product.quantityHeldBack=Hold Back Quantity
-setting.product.quantityHeldBack_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
-setting.product.quantityMaximum=Max Quantity
-setting.product.quantityMaximum_hint=Maximum inventory level for a SKU per location (Min / Max Ordering)
-setting.product.quantityMinimum=Min Quantity
-setting.product.quantityMinimum_hint=Minimum inventory level for a SKU per location before reorder is flagged (Min / Max Ordering)
-setting.product.quantityOrderMaximum=Max Order Quantity
-setting.product.quantityOrderMaximum_hint=Maximum per SKU quantity allowed on order
-setting.product.quantityOrderMinimum=Min Order Quantity
-setting.product.quantityOrderMinimum_hint=Minimum per SKU quantity allowed on order
-setting.product.rootProductCategory=Root Product Category
-setting.product.shippingWeight=Shipping Weight
-setting.product.shippingWeightUnitCode=Shipping Weight Unit of Measurement
-setting.product.shippingWeight_hint=Shipping weight of a single quantity of a SKU
-setting.product.titleString=Product Title Format
-setting.product.trackInventoryFlag=Track Inventory
-setting.product.trackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
-setting.product.urlKey=URL Key
 setting.productDisplayTemplate=Product Template
 setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.productImageLargeHeight=Large Image Height
@@ -1225,7 +1158,6 @@ setting.productImageSmallHeight=Small Image Height
 setting.productImageSmallWidth=Small Image Width
 setting.productTitleString=Product Title Format
 setting.productTypeDisplayTemplate=Product Type Display Template
-setting.settings=Settings
 setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
