--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1148,7 +1148,7 @@ setting.globalURLKeyProduct=Product URL Key
 setting.globalURLKeyProductType=Product Type URL Key
 setting.globalUseProductCacheFlag=User Product Cache
 setting.globalWeightUnitCode=Weight Measurement Unit
-setting.productDisplayTemplate=Product Template
+setting.productDisplayTemplate=Product Display Template
 setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.productImageLargeHeight=Large Image Height
 setting.productImageLargeWidth=Large Image Width
