Working on views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -566,6 +566,7 @@ entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=Order Status
 entity.order.orderType=Order Type
 entity.order.orderid=Order ID
+entity.order.orderorigin=Order Origin
 entity.order.total=Total
 entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
@@ -922,6 +923,7 @@ entity.setting_plural=Settings
 entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
+entity.shippingmethod=Shipping Method
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
