More promotion updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,4 +1,5 @@
-
+#Created by JInto - www.guh-software.de
+#Fri Apr 06 23:49:59 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -60,10 +61,11 @@ admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot 
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.detailpromotion=Promotion Detail
 admin.pricing.pricegrouptabs.rates=Price Group Rates
-admin.pricing.promotionperiod.editdisabled=This promotion period cannot be edited because it has expired.
+admin.pricing.promotionperiod.edit_disabled=This promotion period cannot be edited because it has expired.
 admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
 admin.pricing.promotionperiodtabs.promotionqualifiers=Promotion Qualifiers
 admin.pricing.promotionperiodtabs.promotionrewards=Promotion Rewards
+admin.pricing.promotionqualifier.edit_disabled=This promotion period cannot be edited because it has expired.
 admin.pricing.promotionreward.discounttype.amount=Fixed Amount
 admin.pricing.promotionreward.discounttype.amountOff=Amount Off
 admin.pricing.promotionreward.discounttype.percentageOff=Percentage Off
@@ -872,11 +874,11 @@ entity.promotionqualifierFulfillment.addressZones=Address Zones
 entity.promotionqualifierFulfillment.fulfillmentMethods=Fulfillment Methods
 entity.promotionqualifierFulfillment.maximumFulfillmentWeight=Maximum Weight
 entity.promotionqualifierFulfillment.minimumQuantity=Minimum Quantity
-entity.promotionqualifierFulfillment.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierFulfillment.qualifierType=Qualifier Type
 entity.promotionqualifierFulfillment.qualifiers=Qualifiers
 entity.promotionqualifierFulfillment.shippingMethods=Shipping Methods
 entity.promotionqualifierOrder.minimumPrice=Minimum Order Total
-entity.promotionqualifierOrder.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierOrder.qualifierType=Qualifier Type
 entity.promotionqualifierOrder.qualifiers=Qualifiers
 entity.promotionqualifierProduct.brands=Brands
 entity.promotionqualifierProduct.excludedProductTypes=Product Type Exclusions
@@ -886,7 +888,7 @@ entity.promotionqualifierProduct.maximumPrice=Maximum Item Price
 entity.promotionqualifierProduct.minimumPrice=Minimum Item Price
 entity.promotionqualifierProduct.productTypes=Product Types
 entity.promotionqualifierProduct.products=Products
-entity.promotionqualifierProduct.qualifierTypeDisplay=Qualifier Type
+entity.promotionqualifierProduct.qualifierType=Qualifier Type
 entity.promotionqualifierProduct.qualifiers=Qualifiers
 entity.promotionqualifier_plural=Promotion Qualifiers
 entity.promotionqualifierfulfillment=Fulfillment Promotion Qualifier
