Updated populate to look for 'confirm' keys.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Fri Apr 06 23:49:59 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -272,6 +271,7 @@ define.name=Name
 define.no=No
 define.none=None
 define.notapplicable=N/A
+define.notconfirmed=The value that was entered does not match the 'confirm' value.
 define.ok=Ok
 define.option=Option
 define.quantityshipped=Quantity Shipped
