Working on Fulfillment Methods.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -121,6 +121,8 @@ admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.deletesetting_nav=Remove Setting Override
+admin.setting.fulfillmentmethodtabs.fulfillmentsettings=Fulfillment Method Settings
+admin.setting.fulfillmentmethodtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
@@ -305,6 +307,7 @@ entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
+entity.ShippingMethod_plural=Shipping Methods
 entity.Sku.optionsDisplay=Options
 entity.StockAdjustment.stockAdjustmentType=Type
 entity.Vendor.brands=Brands Offered
