Working on shipping methods and rates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -9,7 +9,7 @@ admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
-admin.define.create_nav=Create New ${itemEntityName}
+admin.define.create_nav=Add ${itemEntityName}
 admin.define.create_title=Create New ${itemEntityName}
 admin.define.delete=Delete ${itemEntityName}
 admin.define.delete_confirm=Are you sure you would like to delete this ${itemEntityName}?
@@ -32,6 +32,7 @@ admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_nav=Save ${itemEntityName}
 admin.define.save_success=The ${itemEntityName} was saved sucessfully.
 admin.define.save_title=Save ${itemEntityName}
+admin.detailshippingmethod.norates_info=Currently there are no rates defined for this shipping method.  You need to define at least one rate for this shipping method to be able to be used on the frontend.  When creating a new rate, you will be able to define which of the active shipping provider integrations you would like to use for the rate, or just define a static amount
 admin.export.list=Export Entire List
 admin.export.listfiltered=Export Filtered List
 admin.help=Help
@@ -136,6 +137,7 @@ admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
+admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Method Rates
 admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
@@ -938,14 +940,16 @@ entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
 entity.shippingmethod.shippingRateIncreaseDollar=Shipping Rate Increase Dollar
 entity.shippingmethod.shippingRateIncreasePercentage=Shipping Rate Increase Percentage
 entity.shippingmethod.useRateTableFlag=Use Rate Table
-entity.shippingrate.addressZone=Address Zone
-entity.shippingrate.maxPrice=Max Price
-entity.shippingrate.maxWeight=Max Weight
-entity.shippingrate.minPrice=Min Price
-entity.shippingrate.minWeight=Min Weight
-entity.shippingrate.shippingMethod=Shipping Method
-entity.shippingrate.shippingRate=Shipping Charge
-entity.shippingrate.shippingRateID=Shipping Rate ID
+entity.shippingmethodrate=Shipping Method Rate
+entity.shippingmethodrate.addressZone=Address Zone
+entity.shippingmethodrate.maxPrice=Max Price
+entity.shippingmethodrate.maxWeight=Max Weight
+entity.shippingmethodrate.minPrice=Min Price
+entity.shippingmethodrate.minWeight=Min Weight
+entity.shippingmethodrate.shippingMethod=Shipping Method
+entity.shippingmethodrate.shippingRate=Shipping Charge
+entity.shippingmethodrate.shippingRateID=Shipping Rate ID
+entity.shippingmethodrate_plural=Shipping Method Rates
 entity.sku=SKU
 entity.sku.defaultFlag=Is Default
 entity.sku.delete_success=The SKU was deleted successfully.
