Lots of work on shipping methods and related settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -61,7 +61,7 @@ admin.pricing.deletepromotionqualifier_disabled=This promotion qualifier cannot 
 admin.pricing.deletepromotionreward_disabled=This promotion reward cannot be deleted because it has been used in a transtacion and/or its promotion period has expired.
 admin.pricing.detailpromotion=Promotion Detail
 admin.pricing.pricegrouptabs.rates=Price Group Rates
-admin.pricing.promotionperiod.edit_disabled=This promotion period cannot be edited because it has expired.
+admin.pricing.promotionperiod.editdisabled_info=This promotion period cannot be edited because it has expired.
 admin.pricing.promotionperiodtabs.promotionperiodcodes=Promotion Codes
 admin.pricing.promotionperiodtabs.promotionqualifiers=Promotion Qualifiers
 admin.pricing.promotionperiodtabs.promotionrewards=Promotion Rewards
@@ -132,12 +132,16 @@ admin.setting.listsettingtabs.global=Global Settings
 admin.setting.listsettingtabs.globaladvanced=Global Advanced Settings
 admin.setting.listsettingtabs.product=Product Settings
 admin.setting.listsettingtabs.producttype=Product Type Settings
+admin.setting.listsettingtabs.shippingmethod=Shipping Method Settings
+admin.setting.listsettingtabs.shippingmethodrate=Shipping Rate Settings
 admin.setting.listsettingtabs.sku=Sku Settings
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
-admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Method Rates
+admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Rates
+admin.setting.shippingmethodtabs.shippingmethodratesettings=Shipping Rate Settings
+admin.setting.shippingmethodtabs.shippingmethodsettings=Shipping Method Settings
 admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
@@ -1169,6 +1173,11 @@ setting.productImageSmallHeight=Small Image Height
 setting.productImageSmallWidth=Small Image Width
 setting.productTitleString=Product Title Format
 setting.productTypeDisplayTemplate=Product Type Display Template
+setting.shippingMethodQualifiedRateSelection=Qualifying Shipping Rate Selection Method
+setting.shippingMethodRateAdjustmentAmount=Rate Adjustment Amount
+setting.shippingMethodRateAdjustmentType=Rate Adjustment Type
+setting.shippingMethodRateMaximumAmount=Maximum Rate Amount
+setting.shippingMethodRateMinimumAmount=Minimum Rate Amount
 setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
