Added view for content setting

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -466,19 +466,28 @@ entity.category.restrictAccessFlag=Restrict Access
 entity.category_plural=Categories
 entity.comment.comment=Comment
 entity.content=Content
-entity.content.allowPurchaseFlag=Would you like to sell this content?
+entity.content.allowPurchaseFlag=Allow Purchase
+entity.content.allowPurchaseFlag_hint=Would you like to sell this content?
 entity.content.cmsContentID=CMS Content ID
 entity.content.cmsContentIDPath=CMS Content ID Path
 entity.content.cmsSiteID=CMS Site ID
 entity.content.contentID=Content ID
-entity.content.defaultProductsPerPage=Default number of products per page
+entity.content.defaultProductsPerPage=Products per page
+entity.content.defaultProductsPerPage_hint=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
-entity.content.productListingFlag=Use as a product listing page
-entity.content.requirePurchaseFlag=Restrict access through purchase
-entity.content.requireSubscriptionFlag=Restrict access through subscription
-entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
+entity.content.disableProductAssignmentFlag_hint=Disable product assignment
+entity.content.productListingFlag=Product listing page
+entity.content.productListingFlag_hint=Use as a product listing page
+entity.content.requirePurchaseFlag=Require purchase
+entity.content.requirePurchaseFlag_hint=Restrict access through purchase
+entity.content.requireSubscriptionFlag=Require subscription
+entity.content.requireSubscriptionFlag_hint=Restrict access through subscription
+entity.content.restrictAccessFlag=Restrict access
+entity.content.restrictAccessFlag_hint=Restrict access through subscription and/or purchase
 entity.content.showProductInSubPagesFlag=Show product in sub pages
-entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
+entity.content.showProductInSubPagesFlag_hint=Show product in sub pages
+entity.content.templateFlag=Template
+entity.content.templateFlag_hint=Use this as a template for Product/Brand/Product Type
 entity.content.title=Content Title
 entity.content_plural=Contents
 entity.country=Country
