Added some hint and back support

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -313,6 +313,13 @@ entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
+entity.ShippingMethodRate.defaultAmount=Default Amount
+entity.ShippingMethodRate.defaultAmount_hint=When using a 'manual' rate this is the amount that will be charged.  If you are using a shipping provider, then this value is the fallback amount if for some reason the shipping provider is unacceable.
+entity.ShippingMethodRate.maximumFulfillmentItemPrice=Max Fulfillment Subtotal
+entity.ShippingMethodRate.maximumFulfillmentWeight=Max Fulfillment Weight
+entity.ShippingMethodRate.minimumFulfillmentItemPrice=Min Fulfillment Subtotal
+entity.ShippingMethodRate.minimumFulfillmentWeight=Min Fulfillment Weight
+entity.ShippingMethodRate.shippingintegrationmethod=Service Provider Method
 entity.ShippingMethod_plural=Shipping Methods
 entity.Sku.optionsDisplay=Options
 entity.StockAdjustment.stockAdjustmentType=Type
@@ -946,11 +953,8 @@ entity.shippingmethod.shippingRateIncreasePercentage=Shipping Rate Increase Perc
 entity.shippingmethod.useRateTableFlag=Use Rate Table
 entity.shippingmethodrate=Shipping Method Rate
 entity.shippingmethodrate.addressZone=Address Zone
-entity.shippingmethodrate.maxPrice=Max Price
-entity.shippingmethodrate.maxWeight=Max Weight
-entity.shippingmethodrate.minPrice=Min Price
-entity.shippingmethodrate.minWeight=Min Weight
 entity.shippingmethodrate.shippingMethod=Shipping Method
+entity.shippingmethodrate.shippingMethodRateID=Shipping Method Rate ID
 entity.shippingmethodrate.shippingRate=Shipping Charge
 entity.shippingmethodrate.shippingRateID=Shipping Rate ID
 entity.shippingmethodrate_plural=Shipping Method Rates
@@ -1182,9 +1186,9 @@ setting.skuAllowBackorderFlag=Backorder OK
 setting.skuAllowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.skuAllowPreorderFlag=Preorder OK
 setting.skuAllowPreorderFlag_hint=Indicate whether this product can be preordered
-setting.skuEligableFulfillmentMethods=Eligable Fulfillment Methods
-setting.skuEligableOrderOrigins=Eligable Order Origins
-setting.skuEligablePaymentMethods=Eligable Payment Methods
+setting.skuEligibleFulfillmentMethods=Eligable Fulfillment Methods
+setting.skuEligibleOrderOrigins=Eligable Order Origins
+setting.skuEligiblePaymentMethods=Eligable Payment Methods
 setting.skuHoldBackQuantity=Hold Back Quantity
 setting.skuHoldBackQuantity_hint=Quantity To Hold Back From ATS (Available To Sell) Calculations
 setting.skuOrderMaximumQuantity=Max Order Quantity
