Updates to shipping method rates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -119,6 +119,7 @@ admin.setting.attributetabs.description=Description
 admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
+admin.setting.createshippingmethodrate_nav=Manual Rate
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.deletesetting_nav=Remove Setting Override
@@ -139,6 +140,7 @@ admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
+admin.setting.shippingmethodratetabs.shippingmethodratesettings=Shipping Rate Settings
 admin.setting.shippingmethodtabs.shippingmethodrates=Shipping Rates
 admin.setting.shippingmethodtabs.shippingmethodratesettings=Shipping Rate Settings
 admin.setting.shippingmethodtabs.shippingmethodsettings=Shipping Method Settings
@@ -250,6 +252,7 @@ define.QVOMIN.full=Quantity Min Per Order
 define.action=Action
 define.actions=Actions
 define.active=Active
+define.add=Add
 define.all=All
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
@@ -272,6 +275,7 @@ define.inherited=Inherited
 define.international=International
 define.length=Length
 define.local=Local
+define.manual=Manual
 define.modifiedByAccount=Modified By
 define.modifiedDateTime=Modified on
 define.na=N/A
@@ -283,6 +287,7 @@ define.notconfirmed=The value that was entered does not match the 'confirm' valu
 define.ok=Ok
 define.option=Option
 define.quantityshipped=Quantity Shipped
+define.rate=Rate
 define.save=Save
 define.select=Select
 define.selectall=Select All
@@ -319,6 +324,7 @@ entity.ShippingMethodRate.maximumFulfillmentItemPrice=Max Fulfillment Subtotal
 entity.ShippingMethodRate.maximumFulfillmentWeight=Max Fulfillment Weight
 entity.ShippingMethodRate.minimumFulfillmentItemPrice=Min Fulfillment Subtotal
 entity.ShippingMethodRate.minimumFulfillmentWeight=Min Fulfillment Weight
+entity.ShippingMethodRate.shippingIntegration=Shipping Integration
 entity.ShippingMethodRate.shippingintegrationmethod=Service Provider Method
 entity.ShippingMethod_plural=Shipping Methods
 entity.Sku.optionsDisplay=Options
@@ -941,6 +947,7 @@ entity.setting_plural=Settings
 entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
+entity.shippingMethodRate.shippingMethodRateName=Rate Name
 entity.shippingmethod=Shipping Method
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
