Updated Shipping Method Rates, and some css updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -254,6 +254,7 @@ define.actions=Actions
 define.active=Active
 define.add=Add
 define.all=All
+define.any=Any
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
 define.cancel=Cancel
@@ -320,6 +321,8 @@ entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
 entity.ShippingMethodRate.defaultAmount=Default Amount
 entity.ShippingMethodRate.defaultAmount_hint=When using a 'manual' rate this is the amount that will be charged.  If you are using a shipping provider, then this value is the fallback amount if for some reason the shipping provider is unacceable.
+entity.ShippingMethodRate.fulfillmentItemPriceRange=Fulfillment Item Price Range
+entity.ShippingMethodRate.fulfillmentWeightRange=Fulfillment Weight Range
 entity.ShippingMethodRate.maximumFulfillmentItemPrice=Max Fulfillment Subtotal
 entity.ShippingMethodRate.maximumFulfillmentWeight=Max Fulfillment Weight
 entity.ShippingMethodRate.minimumFulfillmentItemPrice=Min Fulfillment Subtotal
