Slatwall content changes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -116,6 +116,7 @@ admin.setting.addresszonetabs.locations=Locations
 admin.setting.attributesettabs.attributes=Attributes
 admin.setting.attributetabs.attributeoptions=Attribute Options
 admin.setting.attributetabs.description=Description
+admin.setting.contenttabs.settings=Settings
 admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
@@ -488,20 +489,8 @@ entity.content.cmsContentID=CMS Content ID
 entity.content.cmsContentIDPath=CMS Content ID Path
 entity.content.cmsSiteID=CMS Site ID
 entity.content.contentID=Content ID
-entity.content.defaultProductsPerPage=Products per page
-entity.content.defaultProductsPerPage_hint=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.disableProductAssignmentFlag_hint=Disable product assignment
-entity.content.productListingFlag=Product listing page
-entity.content.productListingFlag_hint=Use as a product listing page
-entity.content.requirePurchaseFlag=Require purchase
-entity.content.requirePurchaseFlag_hint=Restrict access through purchase
-entity.content.requireSubscriptionFlag=Require subscription
-entity.content.requireSubscriptionFlag_hint=Restrict access through subscription
-entity.content.restrictAccessFlag=Restrict access
-entity.content.restrictAccessFlag_hint=Restrict access through subscription and/or purchase
-entity.content.showProductInSubPagesFlag=Show product in sub pages
-entity.content.showProductInSubPagesFlag_hint=Show product in sub pages
 entity.content.templateFlag=Template
 entity.content.templateFlag_hint=Use this as a template for Product/Brand/Product Type
 entity.content.title=Content Title
@@ -1161,6 +1150,20 @@ frontend.checkout.saveaccount=Save & Continue
 frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
 setting.brandDisplayTemplate=Brand Display Template
+setting.contentProductListingFlag=Product listing page
+setting.contentProductListingFlag_hint=Use as a product listing page
+setting.contentDefaultProductsPerPage=Products per page
+setting.contentDefaultProductsPerPage_hint=Default number of products per page
+setting.contentIncludeChildContentProductsFlag=Show product in sub pages
+setting.contentIncludeChildContentProductsFlag_hint=Show product in sub pages
+setting.contentRestrictAccessFlag=Restrict access
+setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
+setting.contentRequirePurchaseFlag=Require purchase
+setting.contentRequirePurchaseFlag_hint=Restrict access through purchase
+setting.contentRequireSubscriptionFlag=Require subscription
+setting.contentRequireSubscriptionFlag_hint=Restrict access through subscription
+setting.contentRestrictedContentDisplayTemplate=Restricted Content template
+setting.contentRestrictedContentDisplayTemplate_hint=Barrier page or pay-wall template
 setting.globalCurrencyLocale=Currency Locale
 setting.globalCurrencyType=Currency Type
 setting.globalDateFormat=Date Format
