rb fix for email

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -266,7 +266,7 @@ define.delete=Delete
 define.detail=Detail
 define.disabled=Disabled
 define.edit=Edit
-define.email=E-Mail
+define.email=Email
 define.exportlist=Export List
 define.false=False
 define.general=General
@@ -1117,7 +1117,7 @@ entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
 entity.vendoraddress.vendorAddressType=vendorAddressType
 entity.vendoraddress_plural=Addresses
-entity.vendoremail.email=email
+entity.vendoremail.email=Email
 entity.vendoremail.vendor=vendor
 entity.vendoremail.vendorEmailID=vendorEmailID
 entity.vendoremail.vendorEmailType=vendorEmailType
