Updated the way that integration settings get set.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -41,10 +41,7 @@ admin.help.default=Help Dashboard
 admin.help_nav=Help
 admin.integration=Integration Management
 admin.integration.default=Integration Dashboard
-admin.integration.integrationtabs.custom=Custom
-admin.integration.integrationtabs.data=Data
-admin.integration.integrationtabs.payment=Payment
-admin.integration.integrationtabs.shipping=Shipping
+admin.integration.integrationtabs.settings=Integration Settings
 admin.integration_nav=Integrations
 admin.main=Dashboard
 admin.main.dashboard.neworders=New Orders
@@ -1150,18 +1147,18 @@ frontend.checkout.saveaccount=Save & Continue
 frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
 setting.brandDisplayTemplate=Brand Display Template
-setting.contentProductListingFlag=Product listing page
-setting.contentProductListingFlag_hint=Use as a product listing page
 setting.contentDefaultProductsPerPage=Products per page
 setting.contentDefaultProductsPerPage_hint=Default number of products per page
 setting.contentIncludeChildContentProductsFlag=Show product in sub pages
 setting.contentIncludeChildContentProductsFlag_hint=Show product in sub pages
-setting.contentRestrictAccessFlag=Restrict access
-setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
+setting.contentProductListingFlag=Product listing page
+setting.contentProductListingFlag_hint=Use as a product listing page
 setting.contentRequirePurchaseFlag=Require purchase
 setting.contentRequirePurchaseFlag_hint=Restrict access through purchase
 setting.contentRequireSubscriptionFlag=Require subscription
 setting.contentRequireSubscriptionFlag_hint=Restrict access through subscription
+setting.contentRestrictAccessFlag=Restrict access
+setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
 setting.contentRestrictedContentDisplayTemplate=Restricted Content template
 setting.contentRestrictedContentDisplayTemplate_hint=Barrier page or pay-wall template
 setting.globalCurrencyLocale=Currency Locale
